完成了系统状态的监视

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "dchest",
+        "gopsutil",
+        "Mountpoint",
         "olahol",
+        "shirou",
         "SSPS"
     ]
 }
