完成获取管理员组 api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "changemap",
         "dchest",
         "gopsutil",
         "Mountpoint",
         "olahol",
         "shirou",
+        "squadadmingroup",
         "SSPS"
     ]
 }
