完成读取管理员api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "changemap",
         "dchest",
+        "dlclark",
         "gopsutil",
         "Mountpoint",
         "olahol",
