完成获取服务器配置api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "dchest",
         "dlclark",
         "gopsutil",
+        "mapstructure",
+        "mitchellh",
         "Mountpoint",
         "olahol",
         "shirou",
