监听面板的配置改变，实现热更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "changemap",
         "dchest",
         "dlclark",
+        "fsnotify",
         "gopsutil",
         "mapstructure",
         "mitchellh",
