完成日志的封装，服务器启动和关闭的检测并写入日志

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "mapstructure",
         "mitchellh",
         "Mountpoint",
+        "natefinch",
         "olahol",
         "shirou",
         "squadadmingroup",
