--- a/panel_config/auth.toml
+++ b/panel_config/auth.toml
@@ -1,6 +1,4 @@
-# 账号密码
 [account]
-username = "admin"
-password = "admin"
-# 操作账号密码的时间  防止修改密码token还生效
-op_time = 2023-03-30T07:32:00-09:00
+op_time = 2023-04-16T11:27:23.0133618+08:00
+password = 'admin1'
+username = 'admin1'
